--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">HealthSheet</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="Banner">Welcome to HealthSheet</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="password">Password:</string>
 </resources>
